--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,6 +25,35 @@
     height: 0;
 }
 
+.snackbar {
+    position: fixed;
+    z-index: 999;
+    bottom: 15px;
+    right: 15px;
+    background-color: var(--bs-dark);
+    color: white;
+    padding: 15px;
+    min-width: 250px;
+    border-radius: 10px;
+    animation: 0.2s snackbar;
+}
+
+@keyframes snackbar {
+    from {opacity: 0; transform: scale(0.85)}
+    to {opacity: 1; transform: scale(1)}
+}
+
+@keyframes snackbar-hide {
+    from {opacity: 1; transform: scale(1)}
+    to {opacity: 0; transform: scale(0.85)}
+}
+
+@media screen and (max-width: 500px) {
+    .snackbar {
+        width: calc(100% - 30px);
+    }
+}
+
 /* \[:where(&)\]:size-4 {
     @apply size-4;
 } */
