--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,7 +55,7 @@
     padding: 15px;
     min-width: 250px;
     border-radius: 10px;
-    animation: 0.2s snackbar;
+    animation: 0.2s snackbar forwards;
 }
 
 @keyframes snackbar {
